Update stylesheet link to page_format.css

--- a/sequences/dropseq.html
+++ b/sequences/dropseq.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<link rel="stylesheet" type="text/css" href="../sequences/format.css">
+<link rel="stylesheet" type="text/css" href="../style_related/page_format.css">
 <title>Drop-seq/Seq-Well</title>
 </head>
 <body>
