--- a/sequences/dropseq.html
+++ b/sequences/dropseq.html
@@ -114,13 +114,15 @@
 </align>
 </pre>
 
-
+target antibody amplify
+<pre>
 <align class="long">
 5'- <p5>AATGATACGGCGACCACCGAGATCTACAC</p5>GCCTGTCCGCGG<tso>AAGCAGTGGTATCAACGCAGAGT</tso>AC-------->
                               |--5'- TTTTTTTT<tso>AAGCAGTGGTATCAACGCAGAGT</tso>ACGT<cbc>[12-bp cell barcode]</cbc><umi>[8-bp UMI]</umi>(dT)XXX...XXX         <me>CAAGTCTTCTTCAGAAATAAGCTTTTGTTC</me>
                                      AAAAAAAA<tso>TTCGTCACCATAGTTGCGTCTCA</tso>TGCA<cbc>[12-bp cell barcode]</cbc><umi>[8-bp UMI]</umi>(pA)XXX...XXXXXXXXXXXX<me>GTTCAGAAGAAGTCTTTATTCGAAAACAAG</me> -5'
-                                                                                                                                                    <--------<p7>GTTCAGAAGAAGTCTTTATTCGAAAACAAG</p7><s7>GGCTCGGGTGCTCTG</s7>[i7] -5'
-
+                                                                                                                                                  <--------<p7>GTTCAGAAGAAGTCTTTATTCGAAAACAAG</p7><s7>GGCTCGGGTGCTCTG</s7>[i7] -5'
+</align>
+</pre>
   
 <h3>(7) Final library structure:</h3>
 <pre>
