Update title and description in dropseq.html

--- a/sequences/dropseq.html
+++ b/sequences/dropseq.html
@@ -3,13 +3,13 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="../style_related/page_format.css">
-<title>Drop-seq/Seq-Well</title>
+<title>Drop-seq/Kanishk-protocol</title>
 </head>
 <body>
 
-<h1><a href="http://www.cell.com/abstract/S0092-8674(15)00549-8" target="_blank"><span style="color:red;">Drop-seq</span></a> / <a href="https://www.nature.com/nmeth/journal/v14/n4/full/nmeth.4179.html" target="_blank"><span style="color:red;">Seq-Well</span></a></h1>
+<h1><a href="https://kanishkasthana.github.io/ChronoSeq/Online-Dropseq-Protocol-v.-3.1-Dec-20152.pdf" target="_blank"><span style="color:red;">Drop-seq</span></a> / <a href="https://kanishkasthana.github.io/ChronoSeq/protocol_library_preparation_for_dropseq_chronoseq_beads.html#bulk_continuation" target="_blank"><span style="color:red;">Seq-Well</span></a></h1>
 
-<p><info>In the original publication in Cell 161, 1202-1214 (2015), there are two batches of beads, with only two base pairs difference. Here, Beads-oligo-dT-seqA was used as demonstration. Seq-Well used exact the same oligo design with Drop-seq with Beads-oligo-dT-seqB, which was published in Nature Methods 14, 395-398 (2017).</info></p>
+<p><info>Dropseq Yeast-MCF7-MCF10A complex. Amplify yeast antibody sequences</info></p>
 
 <br>
 
