Update link text for Kanishk protocol in HTML

--- a/sequences/dropseq.html
+++ b/sequences/dropseq.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1><a href="https://kanishkasthana.github.io/ChronoSeq/Online-Dropseq-Protocol-v.-3.1-Dec-20152.pdf" target="_blank"><span style="color:red;">Drop-seq</span></a> / <a href="https://kanishkasthana.github.io/ChronoSeq/protocol_library_preparation_for_dropseq_chronoseq_beads.html#bulk_continuation" target="_blank"><span style="color:red;">Seq-Well</span></a></h1>
+<h1><a href="https://kanishkasthana.github.io/ChronoSeq/Online-Dropseq-Protocol-v.-3.1-Dec-20152.pdf" target="_blank"><span style="color:red;">Drop-seq</span></a> / <a href="https://kanishkasthana.github.io/ChronoSeq/protocol_library_preparation_for_dropseq_chronoseq_beads.html#bulk_continuation" target="_blank"><span style="color:red;">Kanishk protocol</span></a></h1>
 
 <p><info>Dropseq Yeast-MCF7-MCF10A complex. Amplify yeast antibody sequences</info></p>
 
