Update Illumina P5 and ME tags in dropseq.html

--- a/sequences/dropseq.html
+++ b/sequences/dropseq.html
@@ -140,7 +140,7 @@ Target antibody amplified final sequence
 <align class="long">
 5'- <p5>AATGATACGGCGACCACCGAGATCTACAC</p5>GCCTGTCCGCGG<tso>AAGCAGTGGTATCAACGCAGAGT</tso>ACGT<cbc>NNNNNNNNNNNN</cbc><umi>NNNNNNNN</umi>(dT)XXX...XXX<p7>CAAGTCTTCTTCAGAAATAAGCTTTTGTTC</p7><me>CTGTCTCTTATACACATCT</me><s7>CCGAGCCCACGAGAC</s7>NNNNNNNN<p7>ATCTCGTATGCCGTCTTCTGCTTG</p7>
     <p5>TTACTATGCCGCTGGTGGCTCTAGATGTG</p5>CGGACAGGCGCC<tso>TTCGTCACCATAGTTGCGTCTCA</tso>TGCA<cbc>NNNNNNNNNNNN</cbc><umi>NNNNNNNN</umi>(pA)XXX...XXX<p7>GTTCAGAAGAAGTCTTTATTCGAAAACAAG</p7><me>GACAGAGAATATGTGTAGA</me><s7>GGCTCGGGTGCTCTG</s7>NNNNNNNN<p7>TAGAGCATACGGCAGAAGACGAAC</p7> -5'
-              <p5>Illumina P5</p5>                           <tso>ISPCR/TSO</tso>            <cbc>12bp cell</cbc>     <umi>8bp</umi>        cDNA                  <me>Myc</me>                 <s7>s7</s7>            i7          <p7>Illumina P7</p7>
+              <p5>Illumina P5</p5>                           <tso>ISPCR/TSO</tso>            <cbc>12bp cell</cbc>     <umi>8bp</umi>        cDNA                  <p7>Myc</p7>                    <me>ME</me>               <me>s7</me>          i7         <p7>Illumina P7</p7>
                                                                           <cbc>barcode</cbc>      <umi>UMI</umi>
 </align>
 </pre>
